--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -7,6 +7,6 @@
   <%= text_area_tag :'student[last_name]' %><br>
 
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <%= submit_tag "Submit Post" %>
+  <%= submit_tag "Submit Student" %>
 
 <% end %>
