--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<h3>Post Form</h3>
+<h3>Student Form</h3>
 <%= form_tag students_path do %>
   <label>First Name:</label><br>
   <%= text_field_tag :first_name %><br>
